--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,7 @@
     "zero-to-prod/transformable": "^71.0.9",
     "zero-to-prod/data-model-helper": "^81.11.3",
     "zero-to-prod/psr4-classname": "^71.0",
-    "zero-to-prod/data-model-swagger": "^1.0",
-    "zero-to-prod/data-model-generator": "^2.0"
+    "zero-to-prod/data-model-swagger": "^1.0"
   },
   "autoload": {
     "psr-4": {
@@ -51,7 +50,8 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.0"
+    "phpunit/phpunit": "^10.0",
+    "zero-to-prod/data-model-generator": "^2.0"
   },
   "suggest": {
     "zero-to-prod/data-model": "Transform Data to Type-Safe DTOs",
