--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "zero-to-prod/transformable": "^71.0.9",
     "zero-to-prod/data-model-helper": "^81.11.3",
     "zero-to-prod/psr4-classname": "^71.0",
-    "zero-to-prod/data-model-swagger": "^1.0"
+    "zero-to-prod/data-model-swagger": "^1.0",
+    "zero-to-prod/psr4-varname": "^2.0"
   },
   "autoload": {
     "psr-4": {
