--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "zero-to-prod/data-model-helper": "^81.11.3",
     "zero-to-prod/psr4-classname": "^71.0",
     "zero-to-prod/data-model-swagger": "^1.0",
-    "zero-to-prod/psr4-varname": "^2.0"
+    "zero-to-prod/psr4-varname": "^2.0",
+    "zero-to-prod/package-helper": "^1.1.3"
   },
   "autoload": {
     "psr-4": {
