--- a/composer.json
+++ b/composer.json
@@ -35,11 +35,12 @@
     "php": ">=8.1.0",
     "zero-to-prod/data-model": "^81.7",
     "zero-to-prod/transformable": "^71.0.9",
-    "zero-to-prod/data-model-helper": "^81.11.3",
+    "zero-to-prod/data-model-helper": "^82.0.4",
     "zero-to-prod/psr4-classname": "^71.0",
     "zero-to-prod/data-model-swagger": "^1.0",
     "zero-to-prod/psr4-varname": "^2.0",
-    "zero-to-prod/package-helper": "^1.1.3"
+    "zero-to-prod/package-helper": "^1.1.3",
+    "zero-to-prod/data-model-generator": "^2.0"
   },
   "autoload": {
     "psr-4": {
@@ -52,8 +53,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.0",
-    "zero-to-prod/data-model-generator": "^2.0"
+    "phpunit/phpunit": "^10.0"
   },
   "suggest": {
     "zero-to-prod/data-model": "Transform Data to Type-Safe DTOs",
