Add PHP 8.5 support and improve workflows
- Add Dockerfile, php.ini, and docker-compose configuration for PHP 8.5.
- Update workflows to use `actions/checkout@v5`.
- Add `bin/zero-to-prod-data-model-adapter-swagger` and documentation publishing script.
- Update `composer.json` with new binary and improve documentation in `README.md`.
- Improve `docblock_update.yml` script for enhanced automation.

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
   },
   "license": "MIT",
   "readme": "./README.md",
+  "bin": [
+    "bin/zero-to-prod-data-model-adapter-swagger"
+  ],
   "authors": [
     {
       "name": "David Smith",
